--- a/pages/HTML/theorie-8.2.html
+++ b/pages/HTML/theorie-8.2.html
@@ -89,9 +89,10 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welkom bij pagina 1 over de Eenheidscirkel.</h1>
-            <p>Zie de bijlage voor de bijbehorende Theorie. Op deze pagina wordt bijlage uitgelegd.</p>
-            <p>Heb je deze Theorie onder de knie? Klik op volgende om door te gaan met de eenheidscirkel.</p>
+            <h1>Welkom bij pagina 2 over de Eenheidscirkel.</h1>
+            <p>Hier kunnen we de Theorie die is aangeklikt laten zien met het menu voor alle theorie op dezelfde pagina.</p>
+            <p>We hebben hier dan gewoon een algemene theorie pagina en als je categorie aanklikt blijft het menu wel nog.</p>
+            <p>Ook hebben de pills een hover dat je kan zien waar je je muis hebt. Is dit een beetje wat je bedoelde?</p>
             <div class="buttons">
                 <!-- Modal Bijlage -->
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
@@ -101,7 +102,7 @@
                     aria-hidden="true">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
-                            <img src="../../assets/theorie-8.1-A.png">
+                            <img src="../../assets/theorie-8.1-A2.png">
                         </div>
                 </div>
             </div>
@@ -112,9 +113,9 @@
                 <div class="push"></div>
             </div>
             <footer class="footer">
-                <button type="button" class="btn btn-primary" id="startbutton">Vorige</button>
-                <p>Eenheidscirkel 1</p>
-                <button type="button" class="btn btn-primary" onclick="open_theorie(8.2)">Volgende</button>
+                <button type="button" class="btn btn-primary" onclick="open_theorie(8.1)">Vorige</button>
+                <p>Eenheidscirkel 2</p>
+                <button type="button" class="btn btn-primary" id="startbutton">Volgende</button>
             </footer>
         </div>
     </div>
