--- a/pages/HTML/lessonehc.html
+++ b/pages/HTML/lessonehc.html
@@ -252,7 +252,7 @@
                           trigger: 'focus'
                       })
                   </script>
-                  <script type="module" src="../JS/test.js"></script>
+                  <script type="module" src="../JS/lessonehc.js"></script>
               </div>
           
           </body>
