--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script type="module" src="../JS/initialize.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Script for Bootstrap -->
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+    <div id="foreground-overlay">
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light py-3" style="background-color: #0d1117;">
             <a class="navbar-brand" href="../../index.html">Placeholder</a>
@@ -92,8 +94,8 @@
                 <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
                 <span>In deze les wordt de eenheidscirkel door</span>
                 <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
-                <p id="completionMessage" style="display: none;">Congratulations, you have completed the lesson!</p>
-                <button class="knop" id="lesson-button" onclick="ehc_opgave(1)">START</button>
+                <p id="completionMessage" style="display: none;"></p>
+                <button class="knop" id="lesson-button">START</button>
             </div>
         </div>
 
@@ -134,6 +136,7 @@
             </div>
         </div>
     </div>
+    </div>
 
 
     <!--Script for Bootstrap-->
@@ -146,109 +149,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+        <script type="module" src="../JS/library.js"></script>
 </body>
 
 <script type="module">
-    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore.js";
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js";
-
-    // Firebase configuration
-    const firebaseConfig = {
-    apiKey: "AIzaSyC0lml6tn9XBBwMXv2ihniRR6G8w89eAp8",
-    authDomain: "pws-onderzoek-48e1c.firebaseapp.com",
-    projectId: "pws-onderzoek-48e1c",
-    storageBucket: "pws-onderzoek-48e1c.appspot.com",
-    messagingSenderId: "509841664982",
-    appId: "1:509841664982:web:b8e77c8fc701ab73895277"
-};
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const auth = getAuth(app);
-
 
 // Automatically get the userId and lessonId
-async function loadLessonProgressAutomatically() {
-    const auth = getAuth();
-    const db = getFirestore();
-
-    // Get lessonId from URL parameters
-
-    const lessonCard = document.querySelector(".lesson");
-    if (!lessonCard) {
-        console.error("Lesson card element not found in the DOM.");
-        return;
-    }
-
-    // Use the card's `id` attribute as the `lessonId`
-    const lessonId = lessonCard.id;
-    if (!lessonId) {
-        console.error("Lesson card ID is not defined.");
-        return;
-    }
-
- 
-
-    // Wait for the user to be authenticated
-    onAuthStateChanged(auth, async (user) => {
-        if (user) {
-            const userId = user.uid; // Firebase user ID
-            console.log("User ID:", userId);
-            console.log("Lesson ID:", lessonId);
-
-            try {
-                const lessonRef = doc(db, 'users', userId, 'lessons', lessonId);
-                const lessonSnap = await getDoc(lessonRef);
-
-                const card = document.querySelector(".lesson");
-
-                if (lessonSnap.exists()) {
-                    const data = lessonSnap.data();
-                    const { current_question, completed } = data;
-
-                    const button = document.getElementById("lesson-button");
-
-                    if (completed) {
-                        button.textContent = "Ga naar de resultaten";
-                        button.onclick = () => {
-                            window.location.href = `resultaten.html?id=${lessonId}`;
-                        };
-                        // Add "COMPLETED" text to the card
-                        const completedText = document.createElement("span");
-                        completedText.textContent = "VOLTOOID";
-                        completedText.style.color = "green";
-                        completedText.style.fontWeight = "bold";
-                        completedText.style.position = "absolute";
-                        completedText.style.top = "10px";
-                        completedText.style.right = "10px";
-                        lessonCard.style.position = "relative"; // Ensure card has relative positioning for absolute placement
-                        lessonCard.appendChild(completedText);
-                    } else if (current_question > 1) {
-                        button.textContent = "Hervat";
-                        button.onclick = () => {
-                            window.location.href = `lessonehc.html?id=${current_question}`;
-                        };
-                    } else {
-                        button.textContent = "START";
-                        button.onclick = () => {
-                            window.location.href = "lessonehc.html?id=1";
-                        };
-                    }
-                } else {
-                    console.error("Lesson data not found for user:", userId, "and lessonId:", lessonId);
-                }
-            } catch (error) {
-                console.error("Error fetching lesson progress:", error);
-            }
-        } else {
-            console.error("User is not authenticated.");
-        }
-    });
-}
-
-// Call the function
-loadLessonProgressAutomatically();
 
 </script>
 
