--- a/pages/HTML/contact.html
+++ b/pages/HTML/contact.html
@@ -109,8 +109,8 @@
               <p class="card-text">Jelte vertelt hier iets over zichzelf</p>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Email: jelte@jelte.nl</li>
-              <li class="list-group-item">Tel: 06 12345678</li>
+              <li class="list-group-item">Email: jeltejonker@gmail.com</li>
+              <li class="list-group-item">Tel: +31 6 38387872</li>
               <li class="list-group-item">Klas: V6A</li>
             </ul>
           </div>
@@ -123,7 +123,7 @@
             </div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Email: opjtimmerman@gmail.com</li>
-              <li class="list-group-item">Tel: 06 33786232</li>
+              <li class="list-group-item">Tel: +31 6 33786232</li>
               <li class="list-group-item">Klas: V6C</li>
             </ul>
         </div>    
