--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -93,7 +93,7 @@
                 <span>In deze les wordt de eenheidscirkel door</span>
                 <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
                 <p id="completionMessage" style="display: none;">Congratulations, you have completed the lesson!</p>
-                <button class="knop" id="lesson-button" onclick="ehc_opgave(1)">START</button>
+                <button class="knop" id="lesson-button">START</button>
             </div>
         </div>
 
