--- a/pages/HTML/theorie-8.1.html
+++ b/pages/HTML/theorie-8.1.html
@@ -108,6 +108,7 @@
             <p><br>Uitleg</p>
             <p>Uitleg</p>
             <p>Uitleg</p>
+            <img src="../../assets/theorie-8.1-A.png">
             <div class="wrapper">
                 <div class="push"></div>
             </div>
