--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -99,7 +99,7 @@
             </div>
         </div>
 
-        <div class="lesson">
+        <div class="lesson" id="raaklijn">
             <div class="icon">
                 <img src="../../assets/computer.png">
             </div>
@@ -108,11 +108,11 @@
                 <p>Deze les gaat over <b>de raaklijn</b></p>
                 <span>Deze les behandelt de kunst van de raaklijn.</span>
                 <br><span>Hoe werkt dit en wat kan je ermee?</span>
-                <button class="knop" onclick="rkln_opgave(1)">START</button>
+                <button class="knop" id="lesson-button" onclick="rkln_opgave(1)">START</button>
             </div>
         </div>
 
-        <div class="lesson">
+        <div class="lesson" id="vectoren">
             <div class="icon">
                 <img src="../../assets/computer.png">
             </div>
@@ -120,7 +120,7 @@
                 <h2>Les #3</h2>
                 <p>Deze les gaat over ...</p>
                 <span>beschrijving</span>
-                <button class="knop" onclick="start_opgave3()">START</button>
+                <button class="knop" id="lesson-button" onclick="start_opgave3()">START</button>
             </div>
         </div>
 
@@ -132,7 +132,7 @@
                 <h2>Les #4</h2>
                 <p>Deze les gaat over ...</p>
                 <span>beschrijving</span>
-                <button class="knop" onclick="start_opgave4()">START</button>
+                <button class="knop" id="lesson-button" onclick="start_opgave4()">START</button>
             </div>
         </div>
     </div>
@@ -149,12 +149,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-        <script type="module" src="../JS/library.js"></script>
+    <script type="module" src="../JS/library.js"></script>
 </body>
 
-<script type="module">
 
-// Automatically get the userId and lessonId
+
 
 </script>
 
