--- a/pages/HTML/resultaten.html
+++ b/pages/HTML/resultaten.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../styles/initialize.css";>
-    <title>Lesson Results</title>
+    <link rel="stylesheet" href="../../styles/initialize.css">;
+    <title>Resultaten</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f7f8fc;
+            background-color: #f8f9fa;
         }
         .container {
             padding: 20px;
@@ -54,8 +54,14 @@
             border-bottom: 1px solid #ddd;
         }
         .summary th {
-            background-color: #f0f0f0;
+            background-color: #007bff;
+            border-radius: 4px;
         }
+
+        th{
+            color: white;
+        }
+
     </style>
 </head>
 <body>
@@ -69,29 +75,11 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbareDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Library
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./libraryvwo4.html">Getal en Ruimte VWO 4</a>
-                            <a class="dropdown-item" href="./libraryvwo5.html">Getal en Ruimte VWO 5</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="./library.html">Alle opdrachten</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./library.html">Bibliotheek</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Theorie
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./theorievwo4.html">Getal en Ruimte VWO 4</a>
-                            <a class="dropdown-item" href="./theorievwo5.html">Getal en Ruimte VWO 5</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="./theorie.html">Alle theorie</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./theorie.html">Theorie</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./hoewerkthet.html">Hoe werkt het?</a>
@@ -113,12 +101,12 @@
                         Account
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdown">
-                        <li><span class="dropdown-item">Points: <span id="accountPoints">0</span></span></li>
+                        <li><a href="leaderboard.html"><span class="dropdown-item">Punten: <span id="accountPoints">0</span></span></a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><button id="openAccountModal" class="dropdown-item">Personal details</button></li>
-                        <li><button id="logoutButton" class="dropdown-item">Logout</button></li>
+                        <li><button id="openAccountModal" class="dropdown-item">Persoonlijke Gegevens</button></li>
+                        <li><button id="logoutButton" class="dropdown-item">Uitloggen</button></li>
                     </div>
                     </div>
 
@@ -142,7 +130,7 @@
                                         placeholder="Password">
                                     <button id="loginSubmitButton" class="btn btn-primary w-100">Login</button>
                                     <p class="mt-3 text-center">
-                                        Don’t have an account? <a href="#" id="openRegisterModal">Register here</a>
+                                        Heb je nog geen account? <a href="#" id="openRegisterModal">Maak er hier een aan.</a>
                                     </p>
                                 </div>
                             </div>
@@ -155,20 +143,20 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="registerModalLabel">Register</h5>
+                                    <h5 class="modal-title" id="registerModalLabel">Registreren</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
                                 <div class="modal-body">
                                     <input type="text" id="firstNameInput" class="form-control mb-3"
-                                        placeholder="First Name">
+                                        placeholder="Voornaam">
                                     <input type="text" id="lastNameInput" class="form-control mb-3"
-                                        placeholder="Last Name">
+                                        placeholder="Achternaam">
                                     <input type="email" id="registerEmailInput" class="form-control mb-3"
                                         placeholder="Email">
                                     <input type="password" id="registerPasswordInput" class="form-control mb-3"
-                                        placeholder="Password">
+                                        placeholder="Wachtwoord">
                                     <button id="registerSubmitButton" class="btn btn-primary w-100">Register</button>
                                 </div>
                             </div>
@@ -181,7 +169,7 @@
                         <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="accountModalLabel">Account Settings</h5>
+                                    <h5 class="modal-title" id="accountModalLabel">Account Instellingen</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -193,7 +181,7 @@
                                             <div class="list-group">
                                                 <a href="#accountDetails"
                                                     class="list-group-item list-group-item-action active"
-                                                    data-toggle="list">Account Details</a>
+                                                    data-toggle="list">Account Gegevens</a>
                                                 <a href="#" class="list-group-item list-group-item-action text-danger"
                                                     id="logoutButton2">Logout</a>
                                             </div>
@@ -203,47 +191,45 @@
                                             <div class="tab-content">
                                                 <!-- Account Details Section -->
                                                 <div class="tab-pane fade show active" id="accountDetails">
-                                                    <h3>Account Details</h3>
+                                                    <h3>Account Gegevens</h3>
 
                                                     <!-- First Name and Last Name Update Form -->
                                                     <form id="nameForm">
                                                         <div class="form-group">
-                                                            <label for="firstName">First Name</label>
+                                                            <label for="firstName">Voornaam</label>
                                                             <input type="text" class="form-control" id="firstName"
                                                                 placeholder="Enter first name">
                                                         </div>
                                                         <div class="form-group">
-                                                            <label for="lastName">Last Name</label>
+                                                            <label for="lastName">Achternaam</label>
                                                             <input type="text" class="form-control" id="lastName"
                                                                 placeholder="Enter last name">
                                                         </div>
-                                                        <button type="submit" class="btn btn-primary">Save Name
-                                                            Changes</button>
+                                                        <button type="submit" class="btn btn-primary">Opslaan</button>
                                                     </form>
 
                                                     <hr>
 
                                                     <!-- Password Update Form -->
                                                     <form id="passwordForm">
-                                                        <h5>Change Password</h5>
+                                                        <h5>Verander Wachtwoord</h5>
                                                         <div class="form-group">
-                                                            <label for="oldPassword">Current Password</label>
+                                                            <label for="oldPassword">Huidig Wachtwoord</label>
                                                             <input type="password" class="form-control" id="oldPassword"
-                                                                placeholder="Enter current password">
+                                                                placeholder="Vul je huidige wachtwoord in">
                                                         </div>
                                                         <div class="form-group">
-                                                            <label for="newPassword">New Password</label>
+                                                            <label for="newPassword">Nieuw Wachtwoord</label>
                                                             <input type="password" class="form-control" id="newPassword"
-                                                                placeholder="Enter new password">
+                                                                placeholder="bijv. Paard123!">
                                                         </div>
                                                         <div class="form-group">
-                                                            <label for="confirmNewPassword">Confirm New Password</label>
+                                                            <label for="confirmNewPassword">Bevestig Nieuw Wachtwoord</label>
                                                             <input type="password" class="form-control"
                                                                 id="confirmNewPassword"
-                                                                placeholder="Confirm new password">
+                                                                placeholder="bijv. Paard123!">
                                                         </div>
-                                                        <button type="submit" class="btn btn-primary">Save Password
-                                                            Changes</button>
+                                                        <button type="submit" class="btn btn-primary">Opslaan</button>
                                                     </form>
                                                 </div>
                                             </div>
@@ -276,7 +262,7 @@
             </div>
         </div>
         <div class="summary">
-            <h3>Alle vrageny</h3>
+            <h3>Alle vragen</h3>
             <table>
                 <thead>
                     <tr>
