--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="./contact.html">Contact</a>
                         </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0 mx-auto">
+                    <form class="form-inline my-2 my-lg-1 mx-auto">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</i></button>
                     </form>
@@ -225,7 +225,7 @@
                 <p>Deze les gaat over <b>de raaklijn</b></p>
                 <span>Deze les behandelt de kunst van de raaklijn.</span>
                 <br><span>Hoe werkt dit en wat kan je ermee?</span>
-                <button class="knop" id="lesson-button" onclick="rkln_opgave(1)">START</button>
+                <button class="knop" id="lesson-button">START</button>
             </div>
         </div>
 
@@ -235,9 +235,9 @@
             </div>
             <div class="content">
                 <h2>Les #3</h2>
-                <p>Deze les gaat over ...</p>
-                <span>beschrijving</span>
-                <button class="knop" id="lesson-button" onclick="start_opgave3()">START</button>
+                <p>Deze les gaat over <b>vectoren</b></p>
+                <span>In deze les wordt het ingewikkelde onderwerp van vectoren besproken, waarmee je van punt A naar punt B kan gaan. Maar hoe werkt het nou eigenlijk?</span>
+                <button class="knop" id="lesson-button">START</button>
             </div>
         </div>
 
@@ -249,7 +249,7 @@
                 <h2>Les #4</h2>
                 <p>Deze les gaat over ...</p>
                 <span>beschrijving</span>
-                <button class="knop" id="lesson-button" onclick="start_opgave4()">START</button>
+                <button class="knop" id="lesson-button">START</button>
             </div>
         </div>
     </div>
