--- a/pages/HTML/raaklijn.html
+++ b/pages/HTML/raaklijn.html
@@ -208,7 +208,9 @@
               <div id="snackbar"></div>
 
               <button id="goed">goed</button>
-                <div class="push"></div>
+              <div class="wrapper">
+                  <div class="push"></div>
+              </div>
               <footer class="footer">
                   <button type="button" class="btn btn-primary" id="previous">Vorige</button>
                   <p id="question"></p>
@@ -230,7 +232,7 @@
                           trigger: 'focus'
                       })
                   </script>
-                  <script type="module" src="../JS/vectoren.js"></script>
+                  <script type="module" src="../JS/raaklijn.js"></script>
               </div>
           
           </body>
