--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/toast.css">
     <title>Placeholder | Homepage</title>
+    <link href="https://db.onlinewebfonts.com/c/a5e88382f630f5489da535b2471fc7b0?family=Arame-Stencil" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light py-3" style="background-color: #0d1117;">
-            <a class="navbar-brand" href="../../index.html">Placeholder</a>
+            <a class="navbar-brand" href="../../index.html" style="font-family: Arame-Stencil;">VECTORIUM</a>
 
 
             <div class="navbar-nav ml-auto">
