--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/toast.css">
-    <title>Placeholder | Homepage</title>
+    <title>VECTORIUM | Homepage</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/Vectorium Logo Klein.png" >
     <link href="https://db.onlinewebfonts.com/c/a5e88382f630f5489da535b2471fc7b0?family=Arame-Stencil" rel="stylesheet">
 </head>
 
@@ -184,15 +185,15 @@
 
     <div class="jumbotron">
         <h1 class="display-4">Hallo <span id="displayFirstName"></span>!</h1>
-        <p class="lead">Welkom op de website van Placeholder, de beste methode om jouw wiskunde skills te beoefenen.</p>
+        <p class="lead">Welkom op de website van <a style="font-family: Arame-Stencil;">VECTORIUM</a>, de beste methode om jouw wiskunde skills te beoefenen.</p>
         <hr class="my-4">
         <p id="index-message">Klik hier om in te loggen op de website.</p>
         <a class="btn btn-primary btn-lg" role="button" id="inloggen" style="color: white;">Inloggen</a>
     </div>
     <br>
     <div class="text-center">
-        <h2>Maak wiskunde leuker met Placeholder!</h2>
-            <div class="subtitle">Placeholder is de website om jou te helpen met dat ene specifieke onderwerp te begrijpen.</div>
+        <h2>Maak wiskunde leuker met <a style="font-family: Arame-Stencil;">VECTORIUM</a>!</h2>
+            <div class="subtitle"><a style="font-family: Arame-Stencil;">VECTORIUM</a> is de website om jou te helpen met dat ene specifieke onderwerp te begrijpen.</div>
     </div>
 
     <div class="container">
@@ -228,7 +229,7 @@
           <div class="row">
             <!-- Logo en beschrijving -->
             <div class="col-md-4">
-              <img src="logo.png" alt="Logo" class="mb-2" style="max-width: 150px;">
+                <a style="font-family: Arame-Stencil;">VECTORIUM</a>
               <p>Onze missie is om wiskunde leren eenvoudiger en leuker te maken met innovatieve tools en duidelijke uitleg.</p>
             </div>
       
@@ -262,6 +263,16 @@
       <!-- Voeg FontAwesome toe voor iconen -->
       <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
       
+
+      <style>
+        .text-center {
+  animation: fade-in 0.8s linear;
+}
+@keyframes fade-in {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+      </style>
 
           <div id="snackbar"></div>
     <!--Script for Bootstrap-->
