--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="library.css">
     <title>Placeholder | Library</title>
     <script src="../JS/functions.js"></script>
+    <link href="https://db.onlinewebfonts.com/c/a5e88382f630f5489da535b2471fc7b0?family=Arame-Stencil" rel="stylesheet">
 </head>
 
 <body>
     <div id="foreground-overlay">
         <header>
             <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light py-3" style="background-color: #0d1117;">
-                <a class="navbar-brand" href="../../index.html">Placeholder</a>
+                <a class="navbar-brand" href="../../index.html" style="font-family: Arame-Stencil;">VECTORIUM</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -201,10 +202,10 @@
 
 
     <div class="container">
-        <h1>ALLE LESSEN</h1>
+        <h1 style="color: #007bff; font-family: Arame-Stencil;">ALLE LESSEN</h1>
         <div class="lesson" id="lessonehc">
             <div class="icon">
-                <img src="../../assets/computer.png">
+                <img src="../../assets/Vectorium Logo Klein Blauw.png" width="64" height="64">
             </div>
             <div class="content">
                 <h2>Les #1</h2>
@@ -218,7 +219,7 @@
 
         <div class="lesson" id="raaklijn">
             <div class="icon">
-                <img src="../../assets/computer.png">
+                <img src="../../assets/Vectorium Logo Klein Blauw.png" width="64" height="64">
             </div>
             <div class="content">
                 <h2>Les #2</h2>
@@ -231,7 +232,7 @@
 
         <div class="lesson" id="vectoren">
             <div class="icon">
-                <img src="../../assets/computer.png">
+                <img src="../../assets/Vectorium Logo Klein Blauw.png" width="64" height="64">
             </div>
             <div class="content">
                 <h2>Les #3</h2>
@@ -241,9 +242,9 @@
             </div>
         </div>
 
-        <div class="lesson">
+        <div class="lesson" style="visibility: hidden;">
             <div class="icon">
-                <img src="../../assets/computer.png">
+                <img src="../../assets/Vectorium Logo Klein Blauw.png" width="64" height="64">
             </div>
             <div class="content">
                 <h2>Les #4</h2>
@@ -252,6 +253,8 @@
                 <button class="knop" id="lesson-button">START</button>
             </div>
         </div>
+        
+        <h1 class="text-center">Meer lessen volgen later..</h1>
     </div>
     </div>
 
