--- a/pages/HTML/theorie.html
+++ b/pages/HTML/theorie.html
@@ -89,10 +89,8 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welkom op de Theorie Pagina</h1>
-            <p>Hier kunnen we de Theorie die is aangeklikt laten zien met het menu voor alle theorie op dezelfde pagina.</p>
-            <p>We hebben hier dan gewoon een algemene theorie pagina en als je categorie aanklikt blijft het menu wel nog.</p>
-            <p>Ook hebben de pills een hover dat je kan zien waar je je muis hebt. Is dit een beetje wat je bedoelde?</p>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br>>
+            <h1 class="align-text-bottom" style="display: flex; justify-content: center; font-weight:bold; font-size: 100px;">Welkom op de Theorie Pagina</h1>
         </div>
     </div>
 
