--- a/pages/HTML/theorie-10.1.html
+++ b/pages/HTML/theorie-10.1.html
@@ -92,33 +92,22 @@
             </ul>
         </div>
         <div class="content">
-            <h1>Welkom bij pagina 2 over de Eenheidscirkel.</h1>
-            <p>Hier kunnen we de Theorie die is aangeklikt laten zien met het menu voor alle theorie op dezelfde pagina.</p>
-            <p>We hebben hier dan gewoon een algemene theorie pagina en als je categorie aanklikt blijft het menu wel nog.</p>
-            <p>Ook hebben de pills een hover dat je kan zien waar je je muis hebt. Is dit een beetje wat je bedoelde?</p>
+            <h1>Welkom bij pagina 1 over Vectoren.</h1>
+            <p><br>Heb je deze Theorie onder de knie? Klik op de pijl om door te gaan met vectoren.</p>
             <div class="buttons">
                 <!-- Modal Bijlage -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
-                    bijlage</button>
-
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Zie de
-                    bijlage</button>
-                    <a onclick="open_theorie(8.2)" id="next-arrow" class="arrow-button">&#x2192;</a>
-                    <a onclick="open_theorie(8.1)" id="previous-arrow" class="arrow-button">&#x2190;</a>
-    
-                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <img src="../../assets/theorie-8.1-A2.png">
-                        </div>
-                </div>
+                    <a onclick="open_theorie(10.2)" id="next-arrow" class="arrow-button">&#x2192;</a>
+                    <a onclick="open_theorie(10.1)" id="previous-arrow" class="arrow-button">&#x2190;</a>                
             </div>
-            <p><br>Uitleg</p>
-            <p>Uitleg</p>
-            <p>Uitleg</p>
+            <p><br>Om van punt A naar een punt C te gaan, kan je de vector van punt A naar punt B</p>
+            <p>optellen bij de vector van het punt B naar het punt C. Op deze manier krijg je de vector van</p>
+            <p>punt A naar punt C, oftewel AC. In GeoGebra is dit voorbeeld laten zien.</p>
+            <iframe scrolling="no" frameBorder="0" title="Vector"
+            src="https://www.geogebra.org/material/iframe/id/zprzztsy/width/1000/height/569/border/ffffff/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/false/ctl/false"
+            width="80%" height="50%" style="position: absolute; right: -36%; top:20%"> </iframe>
         </div>
     </div>
+
 
     <!--Script for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
