--- a/pages/HTML/theorie-8.1.html
+++ b/pages/HTML/theorie-8.1.html
@@ -86,6 +86,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Raaklijnen</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="theorie-10.1.html">Vectoren</a>
+                </li>
             </ul>
         </div>
         <div class="content">
@@ -111,14 +114,6 @@
             <p>Uitleg</p>
             <p>Uitleg</p>
             <img src="../../assets/theorie-8.1-A.png">
-            <div class="wrapper">
-                <div class="push"></div>
-                <footer class="footer">
-                <button type="button" class="btn btn-primary" id="startbutton">Vorige</button>
-                <p>Eenheidscirkel 1</p>
-                <button type="button" class="btn btn-primary" onclick="open_theorie(8.2)">Volgende</button>
-            </footer>
-            </div>
         </div>
     </div>
 
