--- a/pages/HTML/contact.html
+++ b/pages/HTML/contact.html
@@ -13,13 +13,14 @@
 
     <link rel="stylesheet" href="./pages/CSS/index.css">
     <script src="../JS/functions.js"></script>
+    <link href="https://db.onlinewebfonts.com/c/a5e88382f630f5489da535b2471fc7b0?family=Arame-Stencil" rel="stylesheet">
     <title>Contact</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light py-3" style="background-color: #0d1117;">
-            <a class="navbar-brand" href="../../index.html">Placeholder</a>
+            <a class="navbar-brand" href="../../index.html" style="font-family: Arame-Stencil;">VECTORIUM</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,9 +41,7 @@
                         <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 mx-auto">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</i></button>
+                <form class="form-inline my-2 my-lg-1 mx-auto">
                 </form>
                 
                 <div class="d-flex justify-content-end">
